# virt-manager

./: .codespellrc  .coveragerc  .gitignore  .gitpublish  .hgignore  .mailmap  .packit.yaml  .packit.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS  CONTRIBUTING.md  COPYING.md  ChangeLog  DESIGN.md  HACKING  HACKING.md  INSTALL  INSTALL.md  MANIFEST.in  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  autobuild.sh  autogen.sh  configure.ac  gnome-virt-manager.spec.in  gnome-vm-manager.glade  gnome-vm-manager.py  meson.build  meson_options.txt  omf.make  pylintrc  pyproject.toml  setup.cfg  setup.py  todo.txt  (+12 more)
data/: bash-completion.sh.in  hicolor  meson.build  org.virt-manager.virt-manager.convert  org.virt-manager.virt-manager.gschema.xml  org.virt_manager.virt-manager.metainfo.xml.in  virt-manager.appdata.xml  virt-manager.appdata.xml.in  virt-manager.desktop.in  virt-manager.schemas
data/bash-completion/: virtmanager
data/icons/: meson.build
man/: Makefile.am  meson.build  virt-clone.pod  virt-clone.rst  virt-convert.pod  virt-image-xml.pod  virt-image.pod  virt-install.pod  virt-install.pod.in  virt-install.rst  virt-manager.pod  virt-manager.rst  virt-xml.pod  virt-xml.rst
po/: LINGUAS  Makefile.am  Makevars.template  POTFILES  POTFILES.in  POTFILES.skip  README.txt  ar.po  as.po  bg.po  bn_IN.po  bs.po  ca.po  cmn.po  cs.po  da.po  de.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kn.po  ko.po  meson.build  ml.po  (+28 more)
src/: Makefile.am  gnome-virt-manager-launch.in  gnome-virt-manager.desktop.in  gnome-virt-manager.glade  gnome-virt-manager.in  gnome-virt-manager.py.in  gnome-virt-manager.service.in  virt-manager-launch.in  virt-manager-tui.py.in  virt-manager.desktop.in  virt-manager.desktop.in.in  virt-manager.glade  virt-manager.in  virt-manager.py.in  virt-manager.schemas.in  virt-manager.service.in  vmm-about.glade  vmm-about.ui  vmm-add-hardware.glade  vmm-add-hardware.ui  vmm-add-virtual-nic.glade  vmm-choose-cd.glade  vmm-choose-cd.ui  vmm-clone.glade  vmm-clone.ui  vmm-console.glade  vmm-create-interface.glade  vmm-create-interface.ui  vmm-create-net.glade  vmm-create-net.ui  vmm-create-pool.glade  vmm-create-pool.ui  vmm-create-vol.glade  vmm-create-vol.ui  vmm-create.glade  vmm-create.glade.orig  vmm-create.ui  vmm-delete.glade  vmm-delete.ui  vmm-details.glade  (+16 more)
src/graphWidgets/: Makefile.am  cellrenderersparkline.c  cellrenderersparkline.h  pycellrenderersparkline.override  pysparklinemodule.override  sparkline.c  sparkline.h  sparklinemodule.c
src/virtManager/: IPy.py  Makefile.am  about.py  addhardware.py  asyncjob.py  autodrawer.py  baseclass.py  choosecd.py  cli.py  clone.py  config.py  connect.py  connectauth.py  connection.py  console.py  create.py  createinterface.py  createmeter.py  createnet.py  createpool.py  createvol.py  delete.py  details.py  domain.py  engine.py  error.py  graphwidgets.py  guidiff.py  halhelper.py  host.py  inspection.py  inspectiondata.py  interface.py  keyring.py  keytable.py  libvirtglib.py  libvirtobject.py  manager.py  mediadev.py  migrate.py  (+18 more)
src/virtManagerTui/: Makefile.am  __init__.py  adddomain.py  addhost.py  addnetwork.py  addpool.py  addvolume.py  changehost.py  configscreen.py  createmeter.py  createnetwork.py  createuser.py  definenet.py  destroynetwork.py  domainconfig.py  domainlistconfigscreen.py  halworker.py  hostconnect.py  hostlistconfigscreen.py  hostmenu.py  libvirtworker.py  listdomains.py  listnetworks.py  listpools.py  mainmenu.py  menuscreen.py  migratedomain.py  netmenu.py  networkconfig.py  (+24 more)
tests/: Makefile.am  __init__.py  capabilities.py  checkprops.py  clitest.py  clonetest.py  codespell_dict.txt  conftest.py  dist.py  hostkeymap.py  image.py  interface.py  magicuri  magicuri.py  meson.build  misc.py  nodedev.py  osdict.py  pep8.cfg  pycodestyle.cfg  pylint-virt-manager.sh  pylint-virtinst.sh  pylint.cfg  storage.py  support.py  test_capabilities.py  test_checkprops.py  test_cli.py  test_cloner.py  test_conn.py  test_disk.py  test_dist.py  test_inject.py  test_misc.py  test_nodedev.py  test_osdict.py  test_storage.py  test_uriparse.py  test_urldetect.py  test_urls.ini  (+13 more)
ui/: about.ui  addhardware.ui  addstorage.ui  asyncjob.ui  choosecd.ui  clone.ui  connect.ui  connectauth.ui  console.ui  create.ui  createconn.ui  createinterface.ui  createnet.ui  createpool.ui  createvm.ui  createvol.ui  delete.ui  details.ui  fsdetails.ui  gfxdetails.ui  host.ui  hostnets.ui  hoststorage.ui  manager.ui  meson.build  migrate.ui  netlist.ui  oslist.ui  preferences.ui  shmem.ui  snapshots.ui  snapshotsnew.ui  storagebrowse.ui  storagelist.ui  tpmdetails.ui  vmm-about.ui  vmm-add-hardware.ui  vmm-clone.ui  vmm-create-interface.ui  vmm-create-net.ui  (+14 more)
virtManager/: __init__.py  about.py  addhardware.py  addstorage.py  asyncjob.py  autodrawer.py  baseclass.py  choosecd.py  clone.py  config.py  connect.py  connectauth.py  connection.py  connmanager.py  console.py  create.py  createconn.py  createinterface.py  createnet.py  createpool.py  createvm.py  createvol.py  dbusapi.py  delete.py  details.py  domain.py  engine.py  error.py  fsdetails.py  gfxdetails.py  graphwidgets.py  guidiff.py  halhelper.py  host.py  hostnets.py  hoststorage.py  importova.py  inspection.py  interface.py  keyring.py  (+35 more)
virtinst/: Boot.py  CPU.py  CapabilitiesParser.py  Clock.py  CloneManager.py  DistroInstaller.py  DomainFeatures.py  DomainNumatune.py  FullVirtGuest.py  Guest.py  ImageFetcher.py  ImageInstaller.py  ImageParser.py  ImportInstaller.py  Installer.py  Interface.py  LiveCDInstaller.py  NodeDeviceParser.py  OSDistro.py  PXEInstaller.py  ParaVirtGuest.py  Seclabel.py  Storage.py  User.py  VirtualAudio.py  VirtualCharDevice.py  VirtualController.py  VirtualDevice.py  VirtualDisk.py  VirtualFilesystem.py  VirtualGraphics.py  VirtualHostDevice.py  VirtualInputDevice.py  VirtualMemballoon.py  VirtualNetworkInterface.py  VirtualRedirDevice.py  VirtualSmartCardDevice.py  VirtualTPMDevice.py  VirtualVideoDevice.py  VirtualWatchdog.py  (+85 more)
(+1371 files in other folders)
