virtmanager_lib_sources = files(
  '__init__.py',
  'connectauth.py',
  'graphwidgets.py',
  'inspection.py',
  'keyring.py',
  'libvirtenummap.py',
  'module_trace.py',
  'statsmanager.py',
  'testmock.py',
  'uiutil.py',
)

install_data(
  virtmanager_lib_sources,
  install_dir: pkgdir / 'virtManager' / 'lib',
)
