virtinst_domain_sources = files(
  '__init__.py',
  'blkiotune.py',
  'clock.py',
  'cpu.py',
  'cputune.py',
  'features.py',
  'idmap.py',
  'keywrap.py',
  'launch_security.py',
  'memorybacking.py',
  'memtune.py',
  'metadata.py',
  'numatune.py',
  'os.py',
  'pm.py',
  'resource.py',
  'seclabel.py',
  'sysinfo.py',
  'vcpus.py',
  'xmlnsqemu.py',
)

install_data(
  virtinst_domain_sources,
  install_dir: pkgdir / 'virtinst' / 'domain',
)
