virtinst_install_sources = files(
  '__init__.py',
  'cloudinit.py',
  'installer.py',
  'installerinject.py',
  'installertreemedia.py',
  'unattended.py',
  'urldetect.py',
  'urlfetcher.py',
  'volumeupload.py',
)

install_data(
  virtinst_install_sources,
  install_dir: pkgdir / 'virtinst' / 'install',
)
