size = $(notdir $(PWD))
appiconsdir = $(datadir)/icons/hicolor/$(size)/apps
actionsiconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
devicesiconsdir = $(pkgdatadir)/icons/hicolor/$(size)/devices

dist_appicons_DATA = \
	$(wildcard $(srcdir)/apps/*.png)
dist_actionsicons_DATA = \
	$(wildcard $(srcdir)/actions/*.png)
dist_devicesicons_DATA = \
	$(wildcard $(srcdir)/devices/*.png)
