size = $(notdir $(PWD))
appiconsdir = $(datadir)/icons/hicolor/$(size)/apps
actionsiconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
statusiconsdir = $(pkgdatadir)/icons/hicolor/$(size)/status

dist_appicons_DATA = \
	$(wildcard $(srcdir)/apps/*.png)
dist_actionsicons_DATA = \
	$(wildcard $(srcdir)/actions/*.png)
dist_statusicons_DATA = \
	$(wildcard $(srcdir)/status/*.png)
